<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/DialogStyle"
        android:orientation="vertical">

        <TextView
            style="@style/DialogTextViewTitle"
            android:text="@string/dialog_delete_subject_title"
            android:textColor="@color/color_black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dialog_delete_subject_subjectname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/DialogTextViewTitle"
            android:paddingTop="@dimen/dialog_contents_vertical_padding"
            android:paddingBottom="@dimen/dialog_contents_vertical_padding"
            android:textStyle="bold"
            android:text="@string/todo_initial_info"
            android:clickable="false"
            android:singleLine="false"/>

        <TextView
            style="@style/DialogTextViewSummary"
            android:text="@string/dialog_delete_subject_tip"
            android:textColor="@color/color_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_btn_delete_subject_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/DialogButton"
                    android:text="@string/cancel"/>

                <Button
                    android:id="@+id/dialog_btn_delete_subject_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/DialogButton"
                    android:text="@string/delete"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>