<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_layout_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/main_layout_action_bar">
        <LinearLayout
            android:id="@+id/main_layout_control_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_control_bar"

            android:orientation="vertical">
            <!--[start] MODE_INPUT_TODO-->
            <RelativeLayout
                android:id="@+id/main_layout_todo_input_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_layout_margin_top"

                android:visibility="gone">
                <RelativeLayout
                    android:id="@+id/main_layout_todo_input_mode_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_layout_size"
                    android:layout_alignParentEnd="true">
                    <EditText
                        android:id="@+id/main_edit_input_year"
                        android:layout_width="@dimen/edit_width_year"
                        style="@style/EditViewStyle"
                        android:hint="@string/year"
                        android:inputType="number"/>
                    <EditText
                        android:id="@+id/main_edit_input_month"
                        android:layout_width="@dimen/edit_width_month_and_day"
                        style="@style/EditViewStyle"
                        android:layout_toEndOf="@id/main_edit_input_year"
                        android:hint="@string/month"
                        android:inputType="number"/>
                    <EditText
                        android:id="@+id/main_edit_input_day"
                        android:layout_width="@dimen/edit_width_month_and_day"
                        style="@style/EditViewStyle"
                        android:layout_toEndOf="@id/main_edit_input_month"
                        android:hint="@string/day"
                        android:inputType="number"/>
                    <Button
                        android:id="@+id/main_btn_input_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonStyleInActivity"
                        android:layout_toEndOf="@id/main_edit_input_day"
                        android:text="@string/calendar" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/main_layout_todo_input_mode_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_layout_size"
                    android:layout_below="@id/main_layout_todo_input_mode_date"
                    android:layout_alignParentEnd="true">
                    <EditText
                        android:id="@+id/main_edit_input_todo_name"
                        android:layout_width="@dimen/edit_width_name"
                        style="@style/EditViewStyle"
                        android:hint="@string/todo_name"/>
                    <CheckBox
                        android:id="@+id/main_cb_input_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxStyle"
                        android:layout_toEndOf="@id/main_edit_input_todo_name"
                        android:text="@string/is_task"/>
                </RelativeLayout>
            </RelativeLayout>
            <!--[end] MODE_INPUT_TODO-->

            <!--[start] MODE_INPUT_SUBJECT-->
            <RelativeLayout
                android:id="@+id/main_layout_subject_input_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_min_height"

                android:visibility="gone">
                <!--
                <Button
                    android:id="@+id/main_btn_subject_add"
                    style="@style/ButtonStyleInActivity"
                    android:layout_alignParentEnd="true"
                    android:text="@string/add"/>
                    -->
                <EditText
                    android:id="@+id/main_edit_input_subject_name"
                    android:layout_width="@dimen/edit_width_name"
                    style="@style/EditViewStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="false"
                    android:layout_marginEnd="@dimen/fab_layout_size"
                    android:hint="@string/subject_name"/>
                <Button
                    android:id="@+id/main_btn_input_subject_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_edit_input_subject_name"
                    android:layout_alignParentEnd="true"
                    style="@style/ButtonStyleInActivity"
                    android:layout_centerVertical="false"
                    android:layout_marginEnd="@dimen/fab_layout_size"
                    android:text="@string/color"/>
            </RelativeLayout>
            <!--[end] MODE_INPUT_SUBJECT-->

            <!--[start] MODE_VIEW_TODO-->
            <LinearLayout
                android:id="@+id/main_layout_todo_viewer_mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical|right"

                android:visibility="visible">
                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_layout_size">

                    <TextView
                        android:id="@+id/main_text_view_todo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textSize="@dimen/text_size_textview"
                        android:text="@string/todo_initial_info"
                        android:textColor="@color/color_gray"
                        />
                </ScrollView>
            </LinearLayout>
            <!--[end] MODE_VIEW_TODO-->

            <!--[start] MODE_VIEW_SUBJECT-->
            <LinearLayout
                android:id="@+id/main_layout_subject_viewer_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_layout_size"
                    android:layout_marginTop="@dimen/fab_layout_margin_top"
                    android:orientation="horizontal">

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <Button
                            android:id="@+id/main_btn_edit_subject_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ButtonStyleInActivity"
                            android:text="@string/subject_edit_name"/>
                        <Button
                            android:id="@+id/main_btn_edit_subject_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ButtonStyleInActivity"
                            android:text="@string/color"/>
                        <Button
                            android:id="@+id/main_btn_subject_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ButtonStyleInActivity"
                            android:text="@string/delete"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fab_layout_size"
                    android:orientation="horizontal">

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <Button
                            android:id="@+id/main_btn_subject_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ButtonStyleInActivity"
                            android:text="@string/subject_move_left"/>
                        <Button
                            android:id="@+id/main_btn_subject_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ButtonStyleInActivity"
                            android:text="@string/subject_move_right"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <!--[end] MODE_VIEW_SUBJECT-->
        </LinearLayout>

        <com.kania.todostack2.view.TodoLayout
            android:id="@+id/main_vg_todo_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/main_layout_control_container">
        </com.kania.todostack2.view.TodoLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_text_guide_text"
                android:text="@string/guide_text_default"
                android:textSize="@dimen/text_size_guide"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="@dimen/fab_layout_size"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_layout_margin_top"
            android:layout_alignParentEnd="true">

            <RelativeLayout
                android:id="@+id/main_layout_fab_bar"
                android:layout_width="@dimen/fab_layout_size"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/main_btn_fab"
                    android:layout_width="@dimen/fab_drawble_size"
                    android:layout_height="@dimen/fab_drawble_size"
                    style="@style/FloatingActionButtonStyle"
                    android:layout_alignParentBottom="true"
                    android:text="@string/fab_add"/>

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>